# simple-mips-asm

./: .clang-format  CMakeLists.txt  README.md  report.docx
Public/simple-mips-asm/: Assembler.hh  Common.hh  Constants.hh  File.hh  Formats.hh  Generation.hh  Parsing.hh  Tokenization.hh
Source/: Assembler.cc  File.cc  Generation.cc  Main.cc  Parsing.cc  Tokenization.cc
Tests/: GenerationTest.cc  ParsingTest.cc  TestCommon.hh  TokenizationTest.cc
